--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,7 @@ name = "hhsh"
 version = "0.1.0"
 edition = "2018"
 license = "GPLv3"
+description = "hhsh tui for rust"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
