--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,7 +2,7 @@
 name = "hhsh"
 version = "0.1.0"
 edition = "2018"
-license = "GPLv3"
+license = " GPL-3.0-or-later"
 description = "hhsh tui for rust"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
